[package]
name = "unique_item_benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "0.1.5"
nohash-hasher = "0.2.0"
rand = "0.8.5"

[[bench]]
name = "vec"
harness = false

[[bench]]
name = "vec_lookup"
harness = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "hash_lookup"
harness = false
